completed all javascript code

--- a/index.html
+++ b/index.html
@@ -11,18 +11,13 @@
     <header>
         <nav>
             <ul>
-                 <li class="link" ><a href="/">Calculator</a></li>
-                 <li class="link"><a href="/result">Result</a></li>
-                 <li class="link"><a href="/interpretation">Interpretation</a></li>
+                 <li class="link" ><a href="#/calculate">Calculator</a></li>
+                 <li class="link"><a href="#/result">Result</a></li>
+                 <li class="link"><a href="#/interpretation">Interpretation</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        
-        
-        <section class="height__container">
-
-        </section>
     </main>
 
     <template id="calculate-page-template">
@@ -32,6 +27,11 @@
 
     <template id="result-page-template">
         <section id="result">
+        </section>
+    </template>
+
+    <template id="interpretation-page-template">
+        <section id="interpretation">
         </section>
     </template>
 </body>
